--- a/package.json
+++ b/package.json
@@ -11,7 +11,8 @@
 		"axios": "^1.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
-		"react-router-dom": "^6.15.0"
+		"react-router-dom": "^6.15.0",
+		"recharts": "^2.8.0"
 	},
 	"devDependencies": {
 		"@vitejs/plugin-react-refresh": "^1.3.6",
