--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
 		"axios": "^1.4.0",
 		"react": "^18.2.0",
 		"react-dom": "^18.2.0",
+		"react-progress-bar-plus": "^1.3.1",
+		"react-progressbar": "^15.4.1",
 		"react-router-dom": "^6.15.0",
 		"recharts": "^2.8.0"
 	},
