--- a/package.json
+++ b/package.json
@@ -1,26 +1,25 @@
 {
-	"name": "vite-react-tailwind",
-	"version": "2.0.0",
-	"scripts": {
-		"dev": "vite",
-		"build": "vite build",
-		"serve": "vite preview",
-		"build:css": "npx tailwindcss -i src/index.css -o src/tailwind.css"
-	},
-	"dependencies": {
-		"axios": "^1.4.0",
-		"react": "^18.2.0",
-		"react-dom": "^18.2.0",
-		"react-progress-bar-plus": "^1.3.1",
-		"react-progressbar": "^15.4.1",
-		"react-router-dom": "^6.15.0",
-		"recharts": "^2.8.0"
-	},
-	"devDependencies": {
-		"@vitejs/plugin-react-refresh": "^1.3.6",
-		"autoprefixer": "^10.4.13",
-		"postcss": "^8.4.20",
-		"tailwindcss": "^3.2.4",
-		"vite": "^4.0.4"
-	}
+  "name": "vite-react-tailwind",
+  "version": "2.0.0",
+  "scripts": {
+    "dev": "vite",
+    "build": "vite build",
+    "serve": "vite preview",
+    "build:css": "npx tailwindcss -i src/index.css -o src/tailwind.css"
+  },
+  "dependencies": {
+    "axios": "^1.4.0",
+    "react": "^18.2.0",
+    "react-bootstrap": "^2.8.0",
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.15.0",
+    "recharts": "^2.8.0"
+  },
+  "devDependencies": {
+    "@vitejs/plugin-react-refresh": "^1.3.6",
+    "autoprefixer": "^10.4.13",
+    "postcss": "^8.4.20",
+    "tailwindcss": "^3.2.4",
+    "vite": "^4.0.4"
+  }
 }
